# legged_robots

./: .gitignore  README.md  backflip_gains.txt  behavior_analysis.md  check-info.py  constants.py  control_plots.py  draw.py  evaluation.py  export.py  generate_reference.py  main.py  mj_viewer.py  my-info.json  pd_ff_gains.txt  pyproject.toml  traj_opt.py  utils.py
assets/: scene.xml  solo8.xml
data/: bipod_traj.json  tripod_traj.json
data/robots/spiderpi/: spiderpi.rbs  spiderpi.rs
src/: CMakeLists.txt
src/app/: app.h  robots.h
src/libs/simAndControl/kinematics/: IK_Solver.h
src/libs/simAndControl/locomotion/: FootFallPattern.h  KinematicTrackingController.h  LocomotionController.h  LocomotionPlannerHelpers.h  LocomotionTrajectoryPlanner.h  SimpleLocomotionTrajectoryPlanner.h
src/libs/simAndControl/robot/: GeneralizedCoordinatesRobotRepresentation.cpp
src/test-a2/: test.cpp
