[project]
name = "CMM-a2"
version = "0.1.0"
description = "Computational Models of Motion - Assignment 2 - Trajectory Optimization"
authors = [
    {name = "Jin Cheng", email = "jin.cheng@inf.ethz.ch"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "casadi",
    "torch",
    "mujoco",
    "imageio (>=2.37.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"